<resources>
    <string name="app_name">Bluetooth Share</string>
	<string name="two_back_touch_exit_app">To exit the app, press the Back button again.</string>
	
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="bluetooth_admin">Bluetooth Admin</string>
    <string name="bluetooth_identity">Rename Device</string>
    <string name="contact">Contacts</string>
    <string name="files">Files</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="apps">Apps</string>
    <string name="my_files">My Files</string>
    <string name="audios">Audios</string>
    <string name="documents">Documents</string>
    <string name="share_via_bluetooth">Share via Bluetooth</string>
    <string name="share_via_apps">Share via Apps</string>
    <string name="share_select_app">Share via Select Apps( e.g E-Mail )</string>
    <string name="search">Search</string>
    <string name="view_mode">View mode</string>
    <string name="extract">Extract</string>
    <string name="share">Share</string>
    <string name="execute">Execute</string>
    <string name="information">Information</string>
    <string name="goto_market">Go to Google Play</string>
    <string name="extracting">Extracting</string>
    <string name="send_to_sdcard_format" formatted="false">\'%s\' was copied to \'%s\'</string>
    <string name="ok">OK</string>
    <string name="apps_search_hint">Filter( App name or Package name )</string>
    <string name="contacts_search_hint">Filter( name or phone number or email)</string>

    <string name="contacts_backup_info">Backup the xxxxx selected contacts.</string>
    <string name="contacts_enter_backup_name">Please enter backup name</string>
    <string name="contacts_backup_result">backed up xxxxx contacts with the name yyyyy</string>
    <string name="contacts_backup_selected">Backup selected contacts</string>

    <string name="delete">Delete</string>
    <string name="uninstall">Uninstall</string>
    <string name="contacts_backup">Backup Contacts</string>
    <string name="delete_format">Deleted( xxxxx )</string>
    <string name="contacts_delete_message">contacts will be deleted</string>
    <string name="action_select_mode">Select</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">items will be deleted</string>
    <string name="create_folder">Create Folder</string>
    <string name="new_folder">New Folder</string>
    <string name="create">Create</string>
    <string name="paste">Paste</string>
    <string name="myfile_filter_hint">Filter</string>
    <string name="read_only">ReadOnly</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="category">Category</string>
    <string name="my_device">My Device</string>
    <string name="enternal_sdcard">Internal Storage</string>
    <string name="downloads">Downloads</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="file_search_hint">Filter( file name )</string>
    <string name="bluetooth_not_enable">Bluetooth is not enabled</string>
    <string name="device_name_change_contents">You can easily distinguish each device by displaying its name in the list of peripheral devices, Bluetooth, WI-FI Direct and other devices.</string>
    <string name="rename_device">Rename device</string>
    <string name="show_ads">Show Ads</string>

</resources>
