<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/images_action_bluetooth_share"
        android:orderInCategory="100"
        android:title="@string/share_via_bluetooth"
        android:icon="@drawable/ic_bluetooth_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/images_action_share"
        android:orderInCategory="100"
        android:title="@string/share_select_app"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/images_action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/images_action_view_mode"
        android:orderInCategory="100"
        android:title="@string/view_mode"
        android:icon="@drawable/ic_view_module_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/images_action_select_mode"
        android:orderInCategory="100"
        android:title="@string/action_select_mode"
        app:showAsAction="never" />

</menu>
